# exam-5

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: Circle.h  Controller.h  Document.h  GraphicPrimitive.h  Line.h  Rectangles.h  View.h
src/: CMakeLists.txt  Circle.cpp  Controller.cpp  Document.cpp  EditTest.cpp  Editor.cpp  GraphicPrimitive.cpp  Line.cpp  Rectangles.cpp  View.cpp
tests/: CMakeLists.txt  Circle.cpp  Edittest.cpp  Line.cpp
